[id].module.scss/.detaiBox/.detail/overflow:autoとpositiojn:relativeを追加

--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -80,8 +80,10 @@
       grid-area: product;
       height: 100%;
       .detail {
+        position: relative;
         max-height: 200px;
         overflow: scroll;
+        overflow: auto;
         width: 100%;
         padding: 0.8rem;
         line-height: 1.8;
