[id].module.scss/.detaiに書いていた内容をdetailBoxに書き換えた

--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -79,11 +79,15 @@
     .detailBox {
       grid-area: product;
       height: 100%;
+      overflow: scroll;
+      background-color: red;
+      max-height: 200px;
+      
       .detail {
-        position: relative;
-        max-height: 200px;
-        overflow: scroll;
-        overflow: auto;
+        
+
+
+        
         width: 100%;
         padding: 0.8rem;
         line-height: 1.8;
