--- a/styles/[id].module.css
+++ b/styles/[id].module.css
@@ -96,11 +96,11 @@
 .body .barrelMain .box .detailBox {
   grid-area: product;
   height: 100%;
-  overflow: scroll;
-  background-color: red;
-  max-height: 200px;
 }
 .body .barrelMain .box .detailBox .detail {
+  max-height: 200px;
+  overflow: scroll;
+  overflow: auto;
   width: 100%;
   padding: 0.8rem;
   line-height: 1.8;
@@ -220,11 +220,11 @@
 .body .bottleMain .box .detailBox {
   grid-area: product;
   height: 100%;
-  overflow: scroll;
-  background-color: red;
-  max-height: 200px;
 }
 .body .bottleMain .box .detailBox .detail {
+  max-height: 200px;
+  overflow: scroll;
+  overflow: auto;
   width: 100%;
   padding: 0.8rem;
   line-height: 1.8;
@@ -344,11 +344,11 @@
 .body .cocktailMain .box .detailBox {
   grid-area: product;
   height: 100%;
-  overflow: scroll;
-  background-color: red;
-  max-height: 200px;
 }
 .body .cocktailMain .box .detailBox .detail {
+  max-height: 200px;
+  overflow: scroll;
+  overflow: auto;
   width: 100%;
   padding: 0.8rem;
   line-height: 1.8;
