--- a/styles/[id].module.css
+++ b/styles/[id].module.css
@@ -1,2 +1,774 @@
+.body {
+  position: relative;
+  top: 130px;
+  width: 100%;
+  min-height: calc(100vh - 130px);
+}
+.body .pageTitle,
+.body .pageTitleCocktail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  z-index: 1;
+  padding: 1rem 0;
+  margin-bottom: 2rem;
+}
+.body .pageTitle h1,
+.body .pageTitleCocktail h1 {
+  font-size: 2.5rem;
+  margin: 0;
+}
+.body .pageTitleCocktail h1:nth-child(2) {
+  margin-left: 1rem;
+}
+.body .pageTitleCocktail h1 {
+  font-size: 2.5rem;
+  margin: 0;
+}
+.body .barrelMain {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: calc(100vh - 130px);
+  padding: 3rem;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("/image/all-menu/barrel.jpg");
+}
+.body .barrelMain::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+}
+.body .barrelMain .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  background-color: white;
+  box-shadow: 5px 5px 10px gray;
+  border-radius: 10px;
+  padding: 1.5rem;
+  width: 65%;
+}
+.body .barrelMain .box .sentence {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.body .barrelMain .box .sentence .title {
+  border: 3px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  width: 100%;
+  padding: 0.8rem;
+  font-size: 1.3rem;
+}
+.body .barrelMain .box .sentence .aboutBox {
+  border: 3px solid blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  padding: 0.8rem;
+  font-weight: bold;
+}
+.body .barrelMain .box .sentence .aboutBox .price {
+  margin: 0 1.5rem 0 0;
+  font-size: 0.9rem;
+}
+.body .barrelMain .box .sentence .aboutBox .product p {
+  margin: 0;
+  font-size: 0.85rem;
+}
+.body .barrelMain .box .sentence .detail {
+  border: 3px solid green;
+  max-height: 200px;
+  overflow: scroll;
+  width: 100%;
+  padding: 0.8rem;
+  line-height: 1.8;
+}
+.body .barrelMain .box .sentence .detail p {
+  margin: 0;
+  font-size: 0.9rem;
+}
+.body .barrelMain .box .image {
+  border: 3px solid orange;
+  position: relative;
+  width: 30%;
+  height: 300px;
+}
+.body .barrelMain .buttonBox {
+  width: 65%;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  z-index: 1;
+}
+.body .barrelMain .buttonBox a:nth-child(2) {
+  margin: 0;
+}
+.body .barrelMain .buttonBox a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  color: white;
+  z-index: 1;
+  padding: 1rem 2rem;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.body .barrelMain .buttonBox a:hover {
+  background-color: white;
+  color: black;
+  transition: 300ms;
+}
+.body .barrelMain .buttonBox a .icon {
+  margin: 0 1rem 0 0;
+}
+.body .bottleMain {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: calc(100vh - 130px);
+  padding: 3rem;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("/image/all-menu/bottle.jpg");
+}
+.body .bottleMain::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+}
+.body .bottleMain .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  background-color: white;
+  box-shadow: 5px 5px 10px gray;
+  border-radius: 10px;
+  padding: 1.5rem;
+  width: 65%;
+}
+.body .bottleMain .box .sentence {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.body .bottleMain .box .sentence .title {
+  border: 3px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  width: 100%;
+  padding: 0.8rem;
+  font-size: 1.3rem;
+}
+.body .bottleMain .box .sentence .aboutBox {
+  border: 3px solid blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  padding: 0.8rem;
+  font-weight: bold;
+}
+.body .bottleMain .box .sentence .aboutBox .price {
+  margin: 0 1.5rem 0 0;
+  font-size: 0.9rem;
+}
+.body .bottleMain .box .sentence .aboutBox .product p {
+  margin: 0;
+  font-size: 0.85rem;
+}
+.body .bottleMain .box .sentence .detail {
+  border: 3px solid green;
+  max-height: 200px;
+  overflow: scroll;
+  width: 100%;
+  padding: 0.8rem;
+  line-height: 1.8;
+}
+.body .bottleMain .box .sentence .detail p {
+  margin: 0;
+  font-size: 0.9rem;
+}
+.body .bottleMain .box .image {
+  border: 3px solid orange;
+  position: relative;
+  width: 30%;
+  height: 300px;
+}
+.body .bottleMain .buttonBox {
+  width: 65%;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  z-index: 1;
+}
+.body .bottleMain .buttonBox a:nth-child(2) {
+  margin: 0;
+}
+.body .bottleMain .buttonBox a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  color: white;
+  z-index: 1;
+  padding: 1rem 2rem;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.body .bottleMain .buttonBox a:hover {
+  background-color: white;
+  color: black;
+  transition: 300ms;
+}
+.body .bottleMain .buttonBox a .icon {
+  margin: 0 1rem 0 0;
+}
+.body .cocktailMain {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: calc(100vh - 130px);
+  padding: 3rem;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("/image/all-menu/cocktail.jpg");
+}
+.body .cocktailMain::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+}
+.body .cocktailMain .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  background-color: white;
+  box-shadow: 5px 5px 10px gray;
+  border-radius: 10px;
+  padding: 1.5rem;
+  width: 65%;
+}
+.body .cocktailMain .box .sentence {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.body .cocktailMain .box .sentence .title {
+  border: 3px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  width: 100%;
+  padding: 0.8rem;
+  font-size: 1.3rem;
+}
+.body .cocktailMain .box .sentence .aboutBox {
+  border: 3px solid blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  padding: 0.8rem;
+  font-weight: bold;
+}
+.body .cocktailMain .box .sentence .aboutBox .price {
+  margin: 0 1.5rem 0 0;
+  font-size: 0.9rem;
+}
+.body .cocktailMain .box .sentence .aboutBox .product p {
+  margin: 0;
+  font-size: 0.85rem;
+}
+.body .cocktailMain .box .sentence .detail {
+  border: 3px solid green;
+  max-height: 200px;
+  overflow: scroll;
+  width: 100%;
+  padding: 0.8rem;
+  line-height: 1.8;
+}
+.body .cocktailMain .box .sentence .detail p {
+  margin: 0;
+  font-size: 0.9rem;
+}
+.body .cocktailMain .box .image {
+  border: 3px solid orange;
+  position: relative;
+  width: 30%;
+  height: 300px;
+}
+.body .cocktailMain .buttonBox {
+  width: 65%;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  z-index: 1;
+}
+.body .cocktailMain .buttonBox a:nth-child(2) {
+  margin: 0;
+}
+.body .cocktailMain .buttonBox a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  color: white;
+  z-index: 1;
+  padding: 1rem 2rem;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.body .cocktailMain .buttonBox a:hover {
+  background-color: white;
+  color: black;
+  transition: 300ms;
+}
+.body .cocktailMain .buttonBox a .icon {
+  margin: 0 1rem 0 0;
+}
+.body footer {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(187, 187, 187);
+}
+.body footer p {
+  margin: 0;
+  color: black;
+}
 
+@media screen and (max-width: 1100px) {
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
+    width: 75%;
+  }
+  .body .barrelMain .buttonBox,
+.body .bottleMain .buttonBox,
+.body .cocktailMain .buttonBox {
+    width: 75%;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
+    width: 90%;
+  }
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
+    font-size: 1.3rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
+    font-size: 0.85rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
+    font-size: 0.8rem;
+  }
+  .body .barrelMain .box .sentence .detail p,
+.body .bottleMain .box .sentence .detail p,
+.body .cocktailMain .box .sentence .detail p {
+    font-size: 0.9rem;
+  }
+  .body .barrelMain .box .image,
+.body .bottleMain .box .image,
+.body .cocktailMain .box .image {
+    width: 30%;
+    height: 280px;
+  }
+  .body .barrelMain .buttonBox,
+.body .bottleMain .buttonBox,
+.body .cocktailMain .buttonBox {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .body .pageTitle h1 {
+    font-size: 2.3rem;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 2rem;
+  }
+  .body .barrelMain,
+.body .bottleMain,
+.body .cocktailMain {
+    background-size: 100%;
+    background-position: top;
+    background-repeat: repeat-y;
+  }
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
+    width: 100%;
+    flex-direction: column;
+  }
+  .body .barrelMain .box .sentence,
+.body .bottleMain .box .sentence,
+.body .cocktailMain .box .sentence {
+    display: grid;
+    grid-template: "title" "product" "about" "image"/1fr;
+    grid-template: "title" "about" "image" "detail"/1fr;
+    width: 100%;
+  }
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
+    grid-area: title;
+    font-size: 1.3rem;
+    width: 100%;
+  }
+  .body .barrelMain .box .sentence .aboutBox,
+.body .bottleMain .box .sentence .aboutBox,
+.body .cocktailMain .box .sentence .aboutBox {
+    grid-area: about;
+  }
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
+    font-size: 0.9rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
+    font-size: 0.85rem;
+  }
+  .body .barrelMain .box .sentence .detail,
+.body .bottleMain .box .sentence .detail,
+.body .cocktailMain .box .sentence .detail {
+    grid-area: detail;
+  }
+  .body .barrelMain .box .sentence .detail p,
+.body .bottleMain .box .sentence .detail p,
+.body .cocktailMain .box .sentence .detail p {
+    font-size: 0.9rem;
+  }
+  .body .barrelMain .box .image,
+.body .bottleMain .box .image,
+.body .cocktailMain .box .image {
+    grid-area: image;
+    width: 100%;
+    height: 200px;
+  }
+  .body .barrelMain .buttonBox,
+.body .bottleMain .buttonBox,
+.body .cocktailMain .buttonBox {
+    width: 100%;
+  }
+  .body .barrelMain .buttonBox a,
+.body .bottleMain .buttonBox a,
+.body .cocktailMain .buttonBox a {
+    padding: 0.8rem 1.5rem;
+  }
+}
+@media screen and (max-width: 650px) {
+  .body .pageTitleCocktail h1 {
+    font-size: 1.75rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .body .pageTitle h1 {
+    font-size: 1.8rem;
+  }
+  .body .pageTitleCocktail {
+    padding: 0.5rem 0;
+    padding: 0;
+    flex-direction: column;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 1.8rem;
+  }
+  .body .pageTitleCocktail h1:nth-child(1) {
+    margin-bottom: 0.3rem;
+  }
+  .body .pageTitleCocktail h1:nth-child(2) {
+    margin-left: 0;
+  }
+  .body .barrelMain,
+.body .bottleMain,
+.body .cocktailMain {
+    padding: 2rem 2.5rem;
+  }
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
+    width: 100%;
+    flex-direction: column;
+    padding: 1rem;
+    padding: 1rem 0.5rem;
+  }
+  .body .barrelMain .box .sentence,
+.body .bottleMain .box .sentence,
+.body .cocktailMain .box .sentence {
+    width: 100%;
+  }
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
+    font-size: 1.3rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox,
+.body .bottleMain .box .sentence .aboutBox,
+.body .cocktailMain .box .sentence .aboutBox {
+    flex-direction: column;
+  }
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
+    font-size: 0.9rem;
+    margin: 0 0 1rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
+    font-size: 0.8rem;
+  }
+  .body .barrelMain .box .sentence .detail p,
+.body .bottleMain .box .sentence .detail p,
+.body .cocktailMain .box .sentence .detail p {
+    font-size: 0.9rem;
+  }
+  .body .barrelMain .box .image,
+.body .bottleMain .box .image,
+.body .cocktailMain .box .image {
+    width: 100%;
+    height: 200px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .body {
+    top: 100px;
+  }
+  .body .pageTitle {
+    padding: 0;
+  }
+  .body .pageTitle h1 {
+    font-size: 1.7rem;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 1.7rem;
+    font-size: 1.6rem;
+  }
+  .body .barrelMain,
+.body .bottleMain,
+.body .cocktailMain {
+    padding: 2rem 2rem;
+  }
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
+    width: 100%;
+    flex-direction: column;
+    padding: 0.5rem;
+  }
+  .body .barrelMain .box .sentence,
+.body .bottleMain .box .sentence,
+.body .cocktailMain .box .sentence {
+    width: 100%;
+  }
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
+    font-size: 1.2rem;
+    padding: 0.5rem 0;
+  }
+  .body .barrelMain .box .sentence .aboutBox,
+.body .bottleMain .box .sentence .aboutBox,
+.body .cocktailMain .box .sentence .aboutBox {
+    flex-direction: column;
+    padding: 0.5rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
+    font-size: 0.9rem;
+    margin: 0 0 1rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
+    font-size: 0.8rem;
+  }
+  .body .barrelMain .box .sentence .detail,
+.body .bottleMain .box .sentence .detail,
+.body .cocktailMain .box .sentence .detail {
+    max-height: 200px;
+    overflow: scroll;
+    padding: 0.5rem;
+  }
+  .body .barrelMain .box .sentence .detail p,
+.body .bottleMain .box .sentence .detail p,
+.body .cocktailMain .box .sentence .detail p {
+    font-size: 0.8rem;
+  }
+  .body .barrelMain .box .image,
+.body .bottleMain .box .image,
+.body .cocktailMain .box .image {
+    width: 100%;
+    height: 200px;
+  }
+  .body .barrelMain .buttonBox,
+.body .bottleMain .buttonBox,
+.body .cocktailMain .buttonBox {
+    width: 100%;
+  }
+  .body .barrelMain .buttonBox a,
+.body .bottleMain .buttonBox a,
+.body .cocktailMain .buttonBox a {
+    padding: 0.8rem 1rem;
+    font-size: 0.9rem;
+  }
+}
+@media screen and (max-width: 390px) {
+  .body {
+    top: 100px;
+  }
+  .body .pageTitle h1 {
+    font-size: 1.6rem;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 1.45rem;
+  }
+  .body .barrelMain,
+.body .bottleMain,
+.body .cocktailMain {
+    padding: 2rem 2rem;
+  }
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
+    width: 100%;
+    flex-direction: column;
+    padding: 0.5rem;
+  }
+  .body .barrelMain .box .sentence,
+.body .bottleMain .box .sentence,
+.body .cocktailMain .box .sentence {
+    width: 100%;
+  }
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
+    font-size: 1rem;
+    padding: 0.5rem 0;
+  }
+  .body .barrelMain .box .sentence .aboutBox,
+.body .bottleMain .box .sentence .aboutBox,
+.body .cocktailMain .box .sentence .aboutBox {
+    flex-direction: column;
+    padding: 0.5rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
+    font-size: 0.8rem;
+    margin: 0 0 1rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
+    font-size: 0.7rem;
+  }
+  .body .barrelMain .box .sentence .detail,
+.body .bottleMain .box .sentence .detail,
+.body .cocktailMain .box .sentence .detail {
+    padding: 0.5rem;
+  }
+  .body .barrelMain .box .sentence .detail p,
+.body .bottleMain .box .sentence .detail p,
+.body .cocktailMain .box .sentence .detail p {
+    font-size: 0.8rem;
+  }
+  .body .barrelMain .box .image,
+.body .bottleMain .box .image,
+.body .cocktailMain .box .image {
+    width: 100%;
+    height: 200px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .body .pageTitle h1 {
+    font-size: 1.6rem;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 1.35em;
+  }
+}
+@media screen and (max-width: 320px) {
+  .body .pageTitle h1 {
+    font-size: 1.4rem;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 1.2em;
+  }
+}
 /*# sourceMappingURL=[id].module.css.map */
