Barrel,Bottle,Cocktailの{id].jsxを修正した

--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -4,17 +4,18 @@
   align-items: center;
 }
 
-@mixin grid {
-  display: grid;
-  grid-template:
-    "title"
-    "product"
-    "about"
-    "image"
-    / 1fr;
-}
+// @mixin grid {
+//   display: grid;
+//   grid-template:
+//     "title"
+//     "product"
+//     "about"
+//     "image"
+//     / 1fr;
+// }
 
 @mixin main {
+  // border: 3px solid magenta;
   position: relative;
   background-size: cover;
   background-position: center;
@@ -39,21 +40,31 @@
   flex-direction: column;
 
   .box {
+    // border: 3px solid greenyellow;
     @include center;
     z-index: 1;
     background-color: white;
     box-shadow: 5px 5px 10px gray;
     border-radius: 10px;
     padding: 1.5rem;
+    padding: 1rem;
     width: 65%;
 
     .sentence {
-      width: 70%;
+      width: 100%;
       @include center;
       flex-direction: column;
+      // border: 3px dashed black;
+      display: grid;
+      grid-template:
+        "title image"
+        "about image"
+        "detail image"
+        /70% 30%;
 
       .title {
-        border: 3px solid red;
+        grid-area: title;
+        // border: 3px solid red;
         @include center;
         margin: 0;
         width: 100%;
@@ -62,7 +73,8 @@
       }
 
       .aboutBox {
-        border: 3px solid blue;
+        grid-area: about;
+        // border: 3px solid blue;
         @include center;
         flex-direction: row;
         width: 100%;
@@ -83,7 +95,8 @@
       }
 
       .detail {
-        border: 3px solid green;
+        grid-area: detail;
+        // border: 3px solid green;
         max-height: 200px;
         overflow: scroll;
         width: 100%;
@@ -98,9 +111,11 @@
     }
 
     .image {
-      border: 3px solid orange;
+      grid-area: image;
+      // border: 3px solid orange;
       position: relative;
       width: 30%;
+      width: 100%;
       height: 300px;
     }
   }
@@ -156,7 +171,7 @@
     margin-bottom: 2rem;
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.25rem;
       margin: 0;
     }
   }
@@ -165,14 +180,10 @@
     h1:nth-child(2) {
       margin-left: 1rem;
     }
-
-    h1 {
-      font-size: 2.5rem;
-      margin: 0;
-    }
   }
 
   .barrelMain {
+    // border: 3px solid magenta;
     @include main;
     background-image: url("/image/all-menu/barrel.jpg");
   }
@@ -197,7 +208,9 @@
 
     p {
       margin: 0;
-      color: black;
+      color: white;
+      font-size: 1em;
+      font-size: 0.9em;
     }
   }
 }
@@ -226,37 +239,6 @@
     .cocktailMain {
       .box {
         width: 90%;
-
-        .sentence {
-          .title {
-            font-size: 1.3rem;
-          }
-
-          .aboutBox {
-            .price {
-              font-size: 0.85rem;
-            }
-
-            .product {
-              p {
-                font-size: 0.8rem;
-              }
-            }
-          }
-
-          .detail {
-            p {
-              font-size: 0.9rem;
-            }
-          }
-        }
-        .image {
-          width: 30%;
-          height: 280px;
-        }
-      }
-      .buttonBox {
-        width: 90%;
       }
     }
   }
@@ -264,30 +246,26 @@
 
 @media screen and (max-width: 768px) {
   .body {
-    .pageTitle {
-      h1 {
-        font-size: 2.3rem;
-      }
-    }
     .pageTitleCocktail {
       h1 {
-        font-size: 2rem;
+        font-size: 1.95rem;
       }
     }
 
     .barrelMain,
     .bottleMain,
     .cocktailMain {
+      // 💎💎💎💎💎💎💎💎💎💎
       background-size: 100%;
       background-position: top;
       background-repeat: repeat-y;
+      // 💎💎💎💎💎💎💎💎💎💎
 
       .box {
-        width: 100%;
-        flex-direction: column;
-        
+        width: 80%;
+
         .sentence {
-          @include grid;
+          // @include grid;
           grid-template:
             "title"
             "about"
@@ -298,19 +276,26 @@
 
           .title {
             grid-area: title;
+            padding: 0.8rem 0;
             font-size: 1.3rem;
             width: 100%;
-            
           }
 
           .aboutBox {
+            flex-direction: column;
+            padding: 0.8rem 0;
             grid-area: about;
+
             .price {
+              margin: 0 0 1.6rem;
+              font-size: 1rem;
               font-size: 0.9rem;
             }
 
             .product {
               p {
+                margin: 0;
+                font-size: 0.9rem;
                 font-size: 0.85rem;
               }
             }
@@ -338,88 +323,139 @@
         }
       }
     }
-  }
-}
 
-@media screen and (max-width: 650px) {
-  .body {
-    .pageTitleCocktail {
-      h1 {
-        font-size: 1.75rem;
+    footer {
+      height: 40px;
+
+      p {
+        font-size: 0.9em;
       }
     }
   }
 }
 
-// 🔥1列表示に変更🔥
+// @media screen and (max-width: 650px) {
+//   .body {
+//     .pageTitleCocktail {
+//       h1 {
+//         font-size: 1.75rem;
+//       }
+//     }
+//   }
+// }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 600px) {
   .body {
-    .pageTitle {
-      h1 {
-        font-size: 1.8rem;
-      }
-    }
-
     .pageTitleCocktail {
-      padding: 0.5rem 0;
-      padding: 0;
       flex-direction: column;
-
-      h1 {
-        font-size: 1.8rem;
-      }
+      padding: 0;
+      padding: 1rem 0;
 
       h1:nth-child(1) {
         margin-bottom: 0.3rem;
       }
-
       h1:nth-child(2) {
-        margin-left: 0;
+        margin-left: 0rem;
       }
     }
 
     .barrelMain,
     .bottleMain,
     .cocktailMain {
-      padding: 2rem 2.5rem;
+      .box {
+        width: 90%;
+      }
+    }
+  }
+}
 
+// @media screen and (max-width: 550px) {
+//   .body {
+//     .pageTitle {
+//       h1 {
+//         font-size: 1.8rem;
+//       }
+//     }
+
+//     .pageTitleCocktail {
+//       padding: 0.5rem 0;
+//       padding: 0;
+//       flex-direction: column;
+
+//       h1 {
+//         font-size: 1.8rem;
+//       }
+
+//       h1:nth-child(1) {
+//         margin-bottom: 0.3rem;
+//       }
+
+//       h1:nth-child(2) {
+//         margin-left: 0;
+//       }
+//     }
+
+//     .barrelMain,
+//     .bottleMain,
+//     .cocktailMain {
+//       padding: 2rem 2.5rem;
+
+//       .box {
+//         width: 100%;
+//         flex-direction: column;
+//         padding: 1rem;
+//         padding: 1rem 0.5rem;
+
+//         .sentence {
+//           width: 100%;
+//           .title {
+//             font-size: 1.3rem;
+//           }
+
+//           .aboutBox {
+//             flex-direction: column;
+//             .price {
+//               font-size: 0.9rem;
+//               margin: 0 0 1rem;
+//             }
+
+//             .product {
+//               p {
+//                 font-size: 0.8rem;
+//               }
+//             }
+//           }
+
+//           .detail {
+//             p {
+//               font-size: 0.9rem;
+//             }
+//           }
+//         }
+//         .image {
+//           width: 100%;
+//           height: 200px;
+//         }
+//       }
+//     }
+//   }
+// }
+
+// 🔥1列表示に変更🔥
+
+@media screen and (max-width: 520px) {
+  .body {
+    .pageTitleCocktail {
+      h1 {
+        font-size: 1.8rem;
+      }
+    }
+
+    .barrelMain,
+    .bottleMain,
+    .cocktailMain {
       .box {
         width: 100%;
-        flex-direction: column;
-        padding: 1rem;
-        padding: 1rem 0.5rem;
-
-        .sentence {
-          width: 100%;
-          .title {
-            font-size: 1.3rem;
-          }
-
-          .aboutBox {
-            flex-direction: column;
-            .price {
-              font-size: 0.9rem;
-              margin: 0 0 1rem;
-            }
-
-            .product {
-              p {
-                font-size: 0.8rem;
-              }
-            }
-          }
-
-          .detail {
-            p {
-              font-size: 0.9rem;
-            }
-          }
-        }
-        .image {
-          width: 100%;
-          height: 200px;
-        }
       }
     }
   }
@@ -429,137 +465,87 @@
   .body {
     top: 100px;
     .pageTitle {
-      padding: 0;
+      margin-bottom: 1rem;
+
       h1 {
-        font-size: 1.7rem;
+        font-size: 1.8rem;
       }
     }
 
     .pageTitleCocktail {
+      margin-bottom: 1rem;
+
       h1 {
-        font-size: 1.7rem;
-        font-size: 1.6rem;
+        font-size: 1.5rem;
       }
     }
 
     .barrelMain,
     .bottleMain,
     .cocktailMain {
-      padding: 2rem 2rem;
+      padding: 1rem;
 
       .box {
-        width: 100%;
-        flex-direction: column;
         padding: 0.5rem;
+        width: 90%;
 
         .sentence {
-          width: 100%;
           .title {
-            font-size: 1.2rem;
-
-            padding: 0.5rem 0;
+            font-size: 0.95rem;
           }
 
           .aboutBox {
-            flex-direction: column;
-            padding: 0.5rem;
-
             .price {
-              font-size: 0.9rem;
-              margin: 0 0 1rem;
+              font-size: 0.85rem;
             }
 
             .product {
               p {
-                font-size: 0.8rem;
+                font-size: 0.75rem;
               }
             }
           }
 
           .detail {
-            max-height: 200px;
-            overflow: scroll;
-            padding: 0.5rem;
             p {
               font-size: 0.8rem;
             }
           }
         }
         .image {
-          width: 100%;
-          height: 200px;
+          height: 180px;
         }
       }
+
       .buttonBox {
-        width: 100%;
+        margin: 2rem 0 1rem;
 
         a {
-          padding: 0.8rem 1rem;
-          font-size: 0.9rem;
+          padding: 0.7rem 1.7rem;
         }
+      }
+    }
+    footer {
+      height: 40px;
+
+      p {
+        font-size: 0.8em;
       }
     }
   }
 }
-@media screen and (max-width: 390px) {
+
+@media screen and (max-width: 400px) {
   .body {
-    top: 100px;
     .pageTitle {
       h1 {
-        font-size: 1.6rem;
+        font-size: 1.7rem;
       }
     }
 
     .pageTitleCocktail {
       h1 {
-        font-size: 1.45rem;
-      }
-    }
-    .barrelMain,
-    .bottleMain,
-    .cocktailMain {
-      padding: 2rem 2rem;
-
-      .box {
-        width: 100%;
-        flex-direction: column;
-        padding: 0.5rem;
-
-        .sentence {
-          width: 100%;
-          .title {
-            font-size: 1rem;
-
-            padding: 0.5rem 0;
-          }
-
-          .aboutBox {
-            flex-direction: column;
-            padding: 0.5rem;
-
-            .price {
-              font-size: 0.8rem;
-              margin: 0 0 1rem;
-            }
-
-            .product {
-              p {
-                font-size: 0.7rem;
-              }
-            }
-          }
-
-          .detail {
-            padding: 0.5rem;
-            p {
-              font-size: 0.8rem;
-            }
-          }
-        }
-        .image {
-          width: 100%;
-          height: 200px;
-        }
+        font-size: 1.35rem;
       }
     }
   }
@@ -569,19 +555,50 @@
   .body {
     .pageTitle {
       h1 {
-        font-size: 1.6rem;
+        font-size: 1.5rem;
       }
     }
 
-    .pageTitleCocktail {
-      h1 {
-        font-size: 1.35em;
+    // .pageTitleCocktail {
+    //   h1 {
+    //     font-size: 1.35em;
+    //   }
+    // }
+
+    .barrelMain,
+    .bottleMain,
+    .cocktailMain {
+      .box {
+        width: 100%;
+
+        .sentence {
+          .title {
+            font-size: 0.9rem;
+          }
+
+          .aboutBox {
+            .price {
+              font-size: 0.8rem;
+            }
+
+            .product {
+              p {
+                font-size: 0.7rem;
+              }
+            }
+          }
+          .detail {
+            p {
+              font-size: 0.75rem;
+            }
+          }
+        }
       }
     }
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 340px) {
   .body {
     .pageTitle {
       h1 {
@@ -591,7 +608,40 @@
 
     .pageTitleCocktail {
       h1 {
-        font-size: 1.2em;
+        font-size: 1.25rem;
+      }
+    }
+
+    .barrelMain,
+    .bottleMain,
+    .cocktailMain {
+      .box {
+        .sentence {
+          .title {
+            padding: 0.8rem 0;
+            font-size: 0.8rem;
+          }
+
+          .aboutBox {
+            .price {
+              font-size: 0.75rem;
+            }
+
+            .product {
+              p {
+                font-size: 0.65rem;
+              }
+            }
+          }
+        }
+
+        .detailBox {
+          .detail {
+            p {
+              font-size: 0.8rem;
+            }
+          }
+        }
       }
     }
   }
