--- a/styles/[id].module.css
+++ b/styles/[id].module.css
@@ -16,15 +16,11 @@
 }
 .body .pageTitle h1,
 .body .pageTitleCocktail h1 {
-  font-size: 2.5rem;
+  font-size: 2.25rem;
   margin: 0;
 }
 .body .pageTitleCocktail h1:nth-child(2) {
   margin-left: 1rem;
-}
-.body .pageTitleCocktail h1 {
-  font-size: 2.5rem;
-  margin: 0;
 }
 .body .barrelMain {
   position: relative;
@@ -60,17 +56,20 @@
   box-shadow: 5px 5px 10px gray;
   border-radius: 10px;
   padding: 1.5rem;
+  padding: 1rem;
   width: 65%;
 }
 .body .barrelMain .box .sentence {
-  width: 70%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  display: grid;
+  grid-template: "title image" "about image" "detail image"/70% 30%;
 }
 .body .barrelMain .box .sentence .title {
-  border: 3px solid red;
+  grid-area: title;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,7 +79,7 @@
   font-size: 1.3rem;
 }
 .body .barrelMain .box .sentence .aboutBox {
-  border: 3px solid blue;
+  grid-area: about;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -98,7 +97,7 @@
   font-size: 0.85rem;
 }
 .body .barrelMain .box .sentence .detail {
-  border: 3px solid green;
+  grid-area: detail;
   max-height: 200px;
   overflow: scroll;
   width: 100%;
@@ -110,9 +109,10 @@
   font-size: 0.9rem;
 }
 .body .barrelMain .box .image {
-  border: 3px solid orange;
+  grid-area: image;
   position: relative;
   width: 30%;
+  width: 100%;
   height: 300px;
 }
 .body .barrelMain .buttonBox {
@@ -181,17 +181,20 @@
   box-shadow: 5px 5px 10px gray;
   border-radius: 10px;
   padding: 1.5rem;
+  padding: 1rem;
   width: 65%;
 }
 .body .bottleMain .box .sentence {
-  width: 70%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  display: grid;
+  grid-template: "title image" "about image" "detail image"/70% 30%;
 }
 .body .bottleMain .box .sentence .title {
-  border: 3px solid red;
+  grid-area: title;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -201,7 +204,7 @@
   font-size: 1.3rem;
 }
 .body .bottleMain .box .sentence .aboutBox {
-  border: 3px solid blue;
+  grid-area: about;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -219,7 +222,7 @@
   font-size: 0.85rem;
 }
 .body .bottleMain .box .sentence .detail {
-  border: 3px solid green;
+  grid-area: detail;
   max-height: 200px;
   overflow: scroll;
   width: 100%;
@@ -231,9 +234,10 @@
   font-size: 0.9rem;
 }
 .body .bottleMain .box .image {
-  border: 3px solid orange;
+  grid-area: image;
   position: relative;
   width: 30%;
+  width: 100%;
   height: 300px;
 }
 .body .bottleMain .buttonBox {
@@ -302,17 +306,20 @@
   box-shadow: 5px 5px 10px gray;
   border-radius: 10px;
   padding: 1.5rem;
+  padding: 1rem;
   width: 65%;
 }
 .body .cocktailMain .box .sentence {
-  width: 70%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  display: grid;
+  grid-template: "title image" "about image" "detail image"/70% 30%;
 }
 .body .cocktailMain .box .sentence .title {
-  border: 3px solid red;
+  grid-area: title;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -322,7 +329,7 @@
   font-size: 1.3rem;
 }
 .body .cocktailMain .box .sentence .aboutBox {
-  border: 3px solid blue;
+  grid-area: about;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -340,7 +347,7 @@
   font-size: 0.85rem;
 }
 .body .cocktailMain .box .sentence .detail {
-  border: 3px solid green;
+  grid-area: detail;
   max-height: 200px;
   overflow: scroll;
   width: 100%;
@@ -352,9 +359,10 @@
   font-size: 0.9rem;
 }
 .body .cocktailMain .box .image {
-  border: 3px solid orange;
+  grid-area: image;
   position: relative;
   width: 30%;
+  width: 100%;
   height: 300px;
 }
 .body .cocktailMain .buttonBox {
@@ -399,7 +407,9 @@
 }
 .body footer p {
   margin: 0;
-  color: black;
+  color: white;
+  font-size: 1em;
+  font-size: 0.9em;
 }
 
 @media screen and (max-width: 1100px) {
@@ -420,44 +430,10 @@
 .body .cocktailMain .box {
     width: 90%;
   }
-  .body .barrelMain .box .sentence .title,
-.body .bottleMain .box .sentence .title,
-.body .cocktailMain .box .sentence .title {
-    font-size: 1.3rem;
-  }
-  .body .barrelMain .box .sentence .aboutBox .price,
-.body .bottleMain .box .sentence .aboutBox .price,
-.body .cocktailMain .box .sentence .aboutBox .price {
-    font-size: 0.85rem;
-  }
-  .body .barrelMain .box .sentence .aboutBox .product p,
-.body .bottleMain .box .sentence .aboutBox .product p,
-.body .cocktailMain .box .sentence .aboutBox .product p {
-    font-size: 0.8rem;
-  }
-  .body .barrelMain .box .sentence .detail p,
-.body .bottleMain .box .sentence .detail p,
-.body .cocktailMain .box .sentence .detail p {
-    font-size: 0.9rem;
-  }
-  .body .barrelMain .box .image,
-.body .bottleMain .box .image,
-.body .cocktailMain .box .image {
-    width: 30%;
-    height: 280px;
-  }
-  .body .barrelMain .buttonBox,
-.body .bottleMain .buttonBox,
-.body .cocktailMain .buttonBox {
-    width: 90%;
-  }
 }
 @media screen and (max-width: 768px) {
-  .body .pageTitle h1 {
-    font-size: 2.3rem;
-  }
   .body .pageTitleCocktail h1 {
-    font-size: 2rem;
+    font-size: 1.95rem;
   }
   .body .barrelMain,
 .body .bottleMain,
@@ -469,14 +445,11 @@
   .body .barrelMain .box,
 .body .bottleMain .box,
 .body .cocktailMain .box {
-    width: 100%;
-    flex-direction: column;
+    width: 80%;
   }
   .body .barrelMain .box .sentence,
 .body .bottleMain .box .sentence,
 .body .cocktailMain .box .sentence {
-    display: grid;
-    grid-template: "title" "product" "about" "image"/1fr;
     grid-template: "title" "about" "image" "detail"/1fr;
     width: 100%;
   }
@@ -484,22 +457,29 @@
 .body .bottleMain .box .sentence .title,
 .body .cocktailMain .box .sentence .title {
     grid-area: title;
+    padding: 0.8rem 0;
     font-size: 1.3rem;
     width: 100%;
   }
   .body .barrelMain .box .sentence .aboutBox,
 .body .bottleMain .box .sentence .aboutBox,
 .body .cocktailMain .box .sentence .aboutBox {
+    flex-direction: column;
+    padding: 0.8rem 0;
     grid-area: about;
   }
   .body .barrelMain .box .sentence .aboutBox .price,
 .body .bottleMain .box .sentence .aboutBox .price,
 .body .cocktailMain .box .sentence .aboutBox .price {
+    margin: 0 0 1.6rem;
+    font-size: 1rem;
     font-size: 0.9rem;
   }
   .body .barrelMain .box .sentence .aboutBox .product p,
 .body .bottleMain .box .sentence .aboutBox .product p,
 .body .cocktailMain .box .sentence .aboutBox .product p {
+    margin: 0;
+    font-size: 0.9rem;
     font-size: 0.85rem;
   }
   .body .barrelMain .box .sentence .detail,
@@ -529,79 +509,39 @@
 .body .cocktailMain .buttonBox a {
     padding: 0.8rem 1.5rem;
   }
-}
-@media screen and (max-width: 650px) {
-  .body .pageTitleCocktail h1 {
-    font-size: 1.75rem;
+  .body footer {
+    height: 40px;
+  }
+  .body footer p {
+    font-size: 0.9em;
   }
 }
-@media screen and (max-width: 550px) {
-  .body .pageTitle h1 {
-    font-size: 1.8rem;
-  }
+@media screen and (max-width: 600px) {
   .body .pageTitleCocktail {
-    padding: 0.5rem 0;
-    padding: 0;
     flex-direction: column;
-  }
-  .body .pageTitleCocktail h1 {
-    font-size: 1.8rem;
+    padding: 0;
+    padding: 1rem 0;
   }
   .body .pageTitleCocktail h1:nth-child(1) {
     margin-bottom: 0.3rem;
   }
   .body .pageTitleCocktail h1:nth-child(2) {
-    margin-left: 0;
+    margin-left: 0rem;
   }
-  .body .barrelMain,
-.body .bottleMain,
-.body .cocktailMain {
-    padding: 2rem 2.5rem;
+  .body .barrelMain .box,
+.body .bottleMain .box,
+.body .cocktailMain .box {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 520px) {
+  .body .pageTitleCocktail h1 {
+    font-size: 1.8rem;
   }
   .body .barrelMain .box,
 .body .bottleMain .box,
 .body .cocktailMain .box {
     width: 100%;
-    flex-direction: column;
-    padding: 1rem;
-    padding: 1rem 0.5rem;
-  }
-  .body .barrelMain .box .sentence,
-.body .bottleMain .box .sentence,
-.body .cocktailMain .box .sentence {
-    width: 100%;
-  }
-  .body .barrelMain .box .sentence .title,
-.body .bottleMain .box .sentence .title,
-.body .cocktailMain .box .sentence .title {
-    font-size: 1.3rem;
-  }
-  .body .barrelMain .box .sentence .aboutBox,
-.body .bottleMain .box .sentence .aboutBox,
-.body .cocktailMain .box .sentence .aboutBox {
-    flex-direction: column;
-  }
-  .body .barrelMain .box .sentence .aboutBox .price,
-.body .bottleMain .box .sentence .aboutBox .price,
-.body .cocktailMain .box .sentence .aboutBox .price {
-    font-size: 0.9rem;
-    margin: 0 0 1rem;
-  }
-  .body .barrelMain .box .sentence .aboutBox .product p,
-.body .bottleMain .box .sentence .aboutBox .product p,
-.body .cocktailMain .box .sentence .aboutBox .product p {
-    font-size: 0.8rem;
-  }
-  .body .barrelMain .box .sentence .detail p,
-.body .bottleMain .box .sentence .detail p,
-.body .cocktailMain .box .sentence .detail p {
-    font-size: 0.9rem;
-  }
-  .body .barrelMain .box .image,
-.body .bottleMain .box .image,
-.body .cocktailMain .box .image {
-    width: 100%;
-    height: 200px;
   }
 }
 @media screen and (max-width: 480px) {
@@ -609,61 +549,42 @@
     top: 100px;
   }
   .body .pageTitle {
-    padding: 0;
+    margin-bottom: 1rem;
   }
   .body .pageTitle h1 {
-    font-size: 1.7rem;
+    font-size: 1.8rem;
+  }
+  .body .pageTitleCocktail {
+    margin-bottom: 1rem;
   }
   .body .pageTitleCocktail h1 {
-    font-size: 1.7rem;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
   .body .barrelMain,
 .body .bottleMain,
 .body .cocktailMain {
-    padding: 2rem 2rem;
+    padding: 1rem;
   }
   .body .barrelMain .box,
 .body .bottleMain .box,
 .body .cocktailMain .box {
-    width: 100%;
-    flex-direction: column;
     padding: 0.5rem;
-  }
-  .body .barrelMain .box .sentence,
-.body .bottleMain .box .sentence,
-.body .cocktailMain .box .sentence {
-    width: 100%;
+    width: 90%;
   }
   .body .barrelMain .box .sentence .title,
 .body .bottleMain .box .sentence .title,
 .body .cocktailMain .box .sentence .title {
-    font-size: 1.2rem;
-    padding: 0.5rem 0;
-  }
-  .body .barrelMain .box .sentence .aboutBox,
-.body .bottleMain .box .sentence .aboutBox,
-.body .cocktailMain .box .sentence .aboutBox {
-    flex-direction: column;
-    padding: 0.5rem;
+    font-size: 0.95rem;
   }
   .body .barrelMain .box .sentence .aboutBox .price,
 .body .bottleMain .box .sentence .aboutBox .price,
 .body .cocktailMain .box .sentence .aboutBox .price {
-    font-size: 0.9rem;
-    margin: 0 0 1rem;
+    font-size: 0.85rem;
   }
   .body .barrelMain .box .sentence .aboutBox .product p,
 .body .bottleMain .box .sentence .aboutBox .product p,
 .body .cocktailMain .box .sentence .aboutBox .product p {
-    font-size: 0.8rem;
-  }
-  .body .barrelMain .box .sentence .detail,
-.body .bottleMain .box .sentence .detail,
-.body .cocktailMain .box .sentence .detail {
-    max-height: 200px;
-    overflow: scroll;
-    padding: 0.5rem;
+    font-size: 0.75rem;
   }
   .body .barrelMain .box .sentence .detail p,
 .body .bottleMain .box .sentence .detail p,
@@ -673,102 +594,90 @@
   .body .barrelMain .box .image,
 .body .bottleMain .box .image,
 .body .cocktailMain .box .image {
-    width: 100%;
-    height: 200px;
+    height: 180px;
   }
   .body .barrelMain .buttonBox,
 .body .bottleMain .buttonBox,
 .body .cocktailMain .buttonBox {
-    width: 100%;
+    margin: 2rem 0 1rem;
   }
   .body .barrelMain .buttonBox a,
 .body .bottleMain .buttonBox a,
 .body .cocktailMain .buttonBox a {
-    padding: 0.8rem 1rem;
-    font-size: 0.9rem;
+    padding: 0.7rem 1.7rem;
+  }
+  .body footer {
+    height: 40px;
+  }
+  .body footer p {
+    font-size: 0.8em;
   }
 }
-@media screen and (max-width: 390px) {
-  .body {
-    top: 100px;
-  }
+@media screen and (max-width: 400px) {
   .body .pageTitle h1 {
-    font-size: 1.6rem;
+    font-size: 1.7rem;
   }
   .body .pageTitleCocktail h1 {
-    font-size: 1.45rem;
+    font-size: 1.35rem;
   }
-  .body .barrelMain,
-.body .bottleMain,
-.body .cocktailMain {
-    padding: 2rem 2rem;
+}
+@media screen and (max-width: 360px) {
+  .body .pageTitle h1 {
+    font-size: 1.5rem;
   }
   .body .barrelMain .box,
 .body .bottleMain .box,
 .body .cocktailMain .box {
     width: 100%;
-    flex-direction: column;
-    padding: 0.5rem;
-  }
-  .body .barrelMain .box .sentence,
-.body .bottleMain .box .sentence,
-.body .cocktailMain .box .sentence {
-    width: 100%;
   }
   .body .barrelMain .box .sentence .title,
 .body .bottleMain .box .sentence .title,
 .body .cocktailMain .box .sentence .title {
-    font-size: 1rem;
-    padding: 0.5rem 0;
-  }
-  .body .barrelMain .box .sentence .aboutBox,
-.body .bottleMain .box .sentence .aboutBox,
-.body .cocktailMain .box .sentence .aboutBox {
-    flex-direction: column;
-    padding: 0.5rem;
+    font-size: 0.9rem;
   }
   .body .barrelMain .box .sentence .aboutBox .price,
 .body .bottleMain .box .sentence .aboutBox .price,
 .body .cocktailMain .box .sentence .aboutBox .price {
     font-size: 0.8rem;
-    margin: 0 0 1rem;
   }
   .body .barrelMain .box .sentence .aboutBox .product p,
 .body .bottleMain .box .sentence .aboutBox .product p,
 .body .cocktailMain .box .sentence .aboutBox .product p {
     font-size: 0.7rem;
   }
-  .body .barrelMain .box .sentence .detail,
-.body .bottleMain .box .sentence .detail,
-.body .cocktailMain .box .sentence .detail {
-    padding: 0.5rem;
-  }
   .body .barrelMain .box .sentence .detail p,
 .body .bottleMain .box .sentence .detail p,
 .body .cocktailMain .box .sentence .detail p {
-    font-size: 0.8rem;
-  }
-  .body .barrelMain .box .image,
-.body .bottleMain .box .image,
-.body .cocktailMain .box .image {
-    width: 100%;
-    height: 200px;
+    font-size: 0.75rem;
   }
 }
-@media screen and (max-width: 360px) {
-  .body .pageTitle h1 {
-    font-size: 1.6rem;
-  }
-  .body .pageTitleCocktail h1 {
-    font-size: 1.35em;
-  }
-}
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 340px) {
   .body .pageTitle h1 {
     font-size: 1.4rem;
   }
   .body .pageTitleCocktail h1 {
-    font-size: 1.2em;
+    font-size: 1.25rem;
+  }
+  .body .barrelMain .box .sentence .title,
+.body .bottleMain .box .sentence .title,
+.body .cocktailMain .box .sentence .title {
+    padding: 0.8rem 0;
+    font-size: 0.8rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox .price,
+.body .bottleMain .box .sentence .aboutBox .price,
+.body .cocktailMain .box .sentence .aboutBox .price {
+    font-size: 0.75rem;
+  }
+  .body .barrelMain .box .sentence .aboutBox .product p,
+.body .bottleMain .box .sentence .aboutBox .product p,
+.body .cocktailMain .box .sentence .aboutBox .product p {
+    font-size: 0.65rem;
+  }
+  .body .barrelMain .box .detailBox .detail p,
+.body .bottleMain .box .detailBox .detail p,
+.body .cocktailMain .box .detailBox .detail p {
+    font-size: 0.8rem;
   }
 }
 /*# sourceMappingURL=[id].module.css.map */
